--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <img src="11.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
+                <img src="images (7).jpeg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
                 <button class="btn btn-primary" type="button" id="btnLike1" onclick="like('countLike1')">Like</button>
                 <button class="btn btn-primary" type="button" id="btnDislike1" onclick="dislike('countLike1')">Dislike</button>
                 <output id="countLike1">0</output>
             </div>
             <div class="col-6">
-                <img src="22.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
+                <img src="1.jpeg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
                 <button class="btn btn-primary" type="button" id="btnLike2" onclick="like('countLike2')">Like</button>
                 <button class="btn btn-primary" type="button" id="btnDislike2" onclick="dislike('countLike2')">Dislike</button>
                 <output id="countLike2">0</output>
