--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-6">
                 <img src="images (7).jpeg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
-                <button class="btn btn-primary" type="button" id="btnLike1" onclick="like('countLike1')">Like</button>
+                <button class="btn btn-primary" type="button" id="btnLike1" onclick="like('countLike1')">👍</button>
                 <button class="btn btn-primary" type="button" id="btnDislike1" onclick="dislike('countLike1')">Dislike</button>
                 <output id="countLike1">0</output>
             </div>
